src/main/resources/ingress/middleware-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: NAME
spec:
  basicAuth:
    secret: SECRET_NAME
