src/main/resources/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c4k-common-https-ingress
  namespace: default
  labels:
    app.kubernetes.part-of: c4k-common-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - FQDN
      secretName: c4k-common-cert
  rules:
    - host: FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: SERVICE_NAME
                port:
                  number: 80
